--- a/scss/components/offer.scss
+++ b/scss/components/offer.scss
@@ -1,5 +1,6 @@
 .offer {
   scroll-margin-top: 72px;
+  overflow-x: hidden;
   h3 {
     padding-bottom: 20px;
     font-size: 24px;
